--- a/threejs/client/src/index.css
+++ b/threejs/client/src/index.css
@@ -16,7 +16,8 @@ html {
 }
 
 .app {
-  @apply relative w-full h-screen overflow-hidden;
+  @apply fixed top-0 left-0 w-full overflow-hidden;
+  overflow: hidden;
 }
 
 .home {
@@ -28,8 +29,9 @@ html {
 }
 
 .head-text {
-  @apply xl:text-[10rem] text-[6rem] xl:leading-[11rem] leading-[7rem] font-black text-black;
+  @apply xl:text-[10rem] text-[4.5rem] xl:leading-[11rem] leading-[7rem] font-black text-black;
 }
+
 
 .download-btn {
   @apply w-14 h-14 flex justify-center items-center rounded-full glassmorphism cursor-pointer outline-none;
